<resources>

    <string name="app_name">OneKey</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_one_key">OneKeys</string>
    <string name="default_app_name">Default&#x0020;Name</string>
    <string name="default_app_version">Version:&#x0020;1.0</string>
    <string name="default_app_version_tag">Version:&#x0020;</string>
    <string name="default_app_name_tag">Name:&#x0020;</string>
    <string name="iv_description">Show&#x0020;the&#x0020;application&#x0020;icon</string>
    <string name="install">Install</string>
    <string name="selectAll">Select&#x0020;All</string>
    <string name="unSelectAll">Unselect&#x0020;All</string>
    <string name="selected_apps">Selected</string>
    <string name="checkbox"></string>
    <string name="scanning">Scanning&#x0020;the&#x0020;storage&#x0020;space&#8230;</string>
    <string name="installing">Installing&#x0020;the&#x0020;selected&#x0020;application&#8230;</string>
    <string name="unknownApp">Unknown&#x0020;application&#x0020;name</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="modified_time">Modified&#x0020;time</string>
    <string name="path">Storage&#x0020;place</string>
    <string name="readable">Readable</string>
    <string name="writable">Writeable</string>
    <string name="executable">Executable</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="share_file">Share&#x0020;file</string>
    <string name="manipulate">Manipulate</string>
    <string name="warning">Warning</string>
    <string name="delete_confirm">Are&#x0020;you&#x0020;sure&#x0020;to&#x0020;delete&#x0020;this&#x0020;file?</string>
    <string name="rename">Rename</string>
    <string name="details">Details</string>
    <string name="illegalStr">The input file name include ILLEGAL character, please try other ones!</string>
    <string name="sd_unmounted">SD card is not unmounted or is checking now, please try OneKey app again after it is ready!</string>
    <string name="sd_statechange">SD card state is change, please try again when sdcard is accessible!</string>
    <string name="no_app_selected">Please&#x0020;select&#x0020;one&#x0020;application&#x0020;at&#x0020;least&#x0020;and&#x0020;then&#x0020;press&#x0020;install&#x0020;button.</string>
    <string name="install_counts">Total install counts：</string>
    <string name="install_success_counts">Success installed：</string>
    <string name="install_failure_counts">Failure installed：</string>
    <string name="default_null"></string>
    <string name="more_back_exit">Press onemore time to exit&#8230;</string>
    <string name="onekey_about">About</string>
    <string name="apply_name">OneKey</string>
    <string name="ab_version">Version: V1.0</string>
    <string name="forum">Forum</string>
    <string name="forum_address">www.museui.com</string>
    <string name="sina_microblog">Sina Weibo</string>
    <string name="ab_official_bb">Forum</string>
    <string name="at_muse_ui">"@MuseUI"</string>
    <string name="tencent_microblog">Tencent Weibo</string> 
    <string name="service_QQ">Custom Service QQ:2817457226</string>
    <string name="copyright_info">MuseUI Studio    All Rights Reserved</string>
    <string name="install_failure">Install failure apps list:</string>
    
    

</resources>